objects/AcctSeed__Transaction_Import_Error__c/AcctSeed__Transaction_Import_Error__c.object-meta.xml
<CustomObject>
    <label>Transaction Import Error</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Transaction Import Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Import Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>