objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Billing__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AcctSeed__Billing__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Billing__c</referenceTo>
    <relationshipLabel>Transaction Import Errors</relationshipLabel>
    <relationshipName>Transaction_Import_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>