objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_City__c</fullName>
    <label>Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>