objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Name__c</fullName>
    <label>Billing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>