objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Billing_Postal_Code__c</fullName>
    <label>Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>