objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Customer__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If empty, select the customer/account associated to this transaction, then click on the Rerun Payment Processing JE button to run the  Create Payment Processing Journal Entries job again.</inlineHelpText>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction Import Errors</relationshipLabel>
    <relationshipName>Transaction_Import_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>