objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>