objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Error__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Error__c</fullName>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>