objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Fee__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Fee__c</fullName>
    <label>Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>