objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Merchant_Reference__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Merchant_Reference__c</fullName>
    <externalId>true</externalId>
    <label>Merchant Reference</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>