objects/AcctSeed__Transaction_Import_Error__c/fields/AcctSeed__Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <referenceTo>AcctSeed__Payment_Processor__c</referenceTo>
    <relationshipLabel>Transaction Import Errors</relationshipLabel>
    <relationshipName>Transaction_Import_Errors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>